// Vitest Snapshot v1

exports[`CdrQuote > default component > renders correctly 1`] = `
<aside
  class="cdr-quote"
>
  <p
    class="cdr-quote__summary"
  >
    This is the summary
  </p>
  
  
  <cite
    class="cdr-quote__citation"
    tag="cite"
  >
    This is the citation
  </cite>
</aside>
`;

exports[`CdrQuote > pullquote > renders correctly 1`] = `
<blockquote
  class="cdr-quote cdr-quote--pull"
>
  <p
    class="cdr-quote__summary"
  >
    This is the pull summary
  </p>
  
  
  <cite
    class="cdr-quote__citation"
    tag="cite"
  >
    This is the pull citation
  </cite>
</blockquote>
`;
